# Chess-Board

./: pyproject.toml
.ipynb_checkpoints/: chess_board-checkpoint.ipynb
