[tool.poetry]
name = "chessboard"
version = "0.1"
description = "Chess board for red and blue queens"
authors = ["Dana Kiswani <danakiswani0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
